# tellsons-bank

./: .gitignore  AGENTS.md  README.md  build.gradle  settings.gradle
.devin/: wiki.json
.github/scripts/: changed_path_coverage_gate.py  coverage_gate.py  find_open_remediation.py  open_devin_session.py  open_devin_swarm.py  resolve_devin_change.py  resolve_devin_trigger.py
.github/workflows/: ci-audit-logger.yml  ci-java.yml  ci-python.yml  ci-ts.yml  coverage-ratchet.yml  devin-change-coverage-trigger.yml  devin-coverage-swarm.yml  devin-issue-trigger.yml  devin-pr-qa.yml  devin-release-gate.yml
docs/architecture/: compliance-data-flow.md  service-catalog.md
docs/compliance/: audit-logger-coverage-evidence.md  auth-gateway-coverage-evidence.md  coverage-baseline.md  critical-paths.md
docs/evidence/: auth-gateway-auth-coverage.md
docs/findings/: auth-gateway-lockout-off-by-one.md
docs/fixtures/: audit-logger-redaction.json  synthetic-accounts.json  synthetic-audit-lines.json  synthetic-auth-events.json  synthetic-customers.json  synthetic-disputes.json
libs/shared-models/: README.md  audit-record.schema.json  transaction-event.schema.json
scripts/: coverage_baseline.py
services/audit-logger/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  tellsons.service.json
services/audit-logger/audit_logger/: __init__.py  formatter.py  log_chain.py  redactor.py  service.py  sink.py
services/audit-logger/docs/: bootstrap-target.md  hash-chain.md  redaction.md  sink-contract.md
services/audit-logger/tests/: conftest.py  formatter_test.py  log_chain_test.py  redactor_test.py  service_test.py  sink_test.py  test_formatter.py  test_log_chain.py  test_redactor.py  test_service.py  test_sink.py
services/audit-logger/tests/fixtures/: synthetic_redaction_cases.json
(+129 files in other folders)
