[project]
name = "audit-logger"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["audit_logger"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.coverage.json]
output = "coverage.json"
