[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-logger"
version = "0.0.0"
description = "Tamper-evident audit logging for Tellson's Bank."
requires-python = ">=3.12"

[tool.setuptools]
packages = ["audit_logger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["audit_logger"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.json]
output = "coverage.json"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"
